--- a/.npmignore
+++ b/.npmignore
@@ -1,7 +1,12 @@
 .DS_Store
-node_modules
-/dist
-
+node_modules/
+src/
+packages/
+public/
+vue.config.js
+babel.config.js
+*.map
+*.html
 
 # local env files
 .env.local
@@ -11,7 +16,6 @@ node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
 
 # Editor directories and files
 .idea
@@ -20,12 +24,4 @@ pnpm-debug.log*
 *.ntvs*
 *.njsproj
 *.sln
-*.sw?
-
-# 忽略目录
-examples/
-packages/
-public/
-
-
-config.build.js
+*.sw*
